--- a/styles/global.css
+++ b/styles/global.css
@@ -11,6 +11,8 @@ body,
 html {
   padding: 0;
   margin: 0;
+  position: relative;
+  z-index: auto;
 }
 
 body {
@@ -19,6 +21,11 @@ body {
     'Droid Sans', 'Helvetica Neue', 'Noto Sans', sans-serif;
   font-family: var(--notion-font);
   overflow-x: hidden;
+}
+
+#__next {
+  position: relative;
+  z-index: auto;
 }
 
 .static-tweet blockquote {
